# esp32s3-sim7670g-base

./: .gitignore  README.md
firmware/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
firmware/main/: CMakeLists.txt  ble.c  ble.h  board.c  board.h  camera.c  camera.h  dashboard.h  idf_component.yml  main.c  sim7670.c  sim7670.h  webserver.c  webserver.h  wifi_manager.c  wifi_manager.h
